clang/test/CIR/IR/invalid-opencl-kernel-arg-metadata.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

// expected-error @below {{failed to verify 'addr_space': language address space array attribute}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = ["none"],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [""]
>

// -----

// expected-error @below {{failed to verify 'access_qual': string array attribute}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [#cir<lang_address_space(default)>],
  access_qual = [42 : i32],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [""]
>

// -----

// expected-error @below {{failed to verify 'type': string array attribute}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [#cir<lang_address_space(default)>],
  access_qual = ["none"],
  type = [42 : i32],
  base_type = ["uint*"],
  type_qual = [""]
>

// -----

// expected-error @below {{failed to verify 'base_type': string array attribute}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [#cir<lang_address_space(default)>],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = [42 : i32],
  type_qual = [""]
>

// -----

// expected-error @below {{failed to verify 'type_qual': string array attribute}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [#cir<lang_address_space(default)>],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [42 : i32]
>

// -----

// expected-error @below {{failed to verify 'name': string array attribute or null}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [#cir<lang_address_space(default)>],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [""],
  name = [33 : i32]
>

// -----

// expected-error @below {{all arrays must have the same number of elements}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [#cir<lang_address_space(default)>],
  access_qual = ["none"],
  type = ["uint*", "myunsignedint*"],
  base_type = ["uint*", "uint*"],
  type_qual = [""],
  name = ["foo"]
>
